--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,40 +1,96 @@
-.slider-container {
+.slide-container {
   height: calc(100vh - 250px);
   width: 100%;
   display: flex;
+  
   position: relative;
+  overflow: hidden;
+  
+}
+
+.arrow-right,
+.arrow-left {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 110, 0.5);
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 30px;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  color: var(--main-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all .1s ease;
+}
+
+.arrow-right{
+  right: 10px;
+}
+
+.arrow-left{
+  left: 10px;
+}
+
+.arrow-right:hover,
+.arrow-left:hover{
+  width: 52px;
+  height: 52px;
+  font-size: 32px;
+  box-shadow: 0px 0 1px 1px rgba(0, 0, 0, 0.356);
+
 }
 
 .slider-wrapper {
-  height: 100px;
+  height: 100%;
   display: flex;
+  transition: all 1s ease-in-out;
+
 }
 
 .slider {
   height: calc(100vh - 250px);
-  width: 100vw;
-  display: flex;
-  align-items: center;
+    width: 100vw;
+    display: flex;
+    align-items: center;
 }
 
 .first-slide {
-    background: rgb(17, 0, 255);
-background: linear-gradient(0deg, rgba(35, 35, 255, 0.788) 5%, rgba(51, 102, 255, 0.623) 48%, rgba(145, 160, 255, 0.185) 76%);
+  background: rgb(17, 0, 255);
+  background: linear-gradient(
+    0deg,
+    rgba(35, 35, 255, 0.788) 5%,
+    rgba(51, 102, 255, 0.623) 48%,
+    rgba(145, 160, 255, 0.185) 76%
+  );
 }
 
-.second-slide{
-    background: rgb(255, 0, 0);
-background: linear-gradient(90deg, rgba(3, 158, 16, 0.849) 0%, rgba(55, 235, 0, 0.459) 100%, rgba(252, 176, 69, 0.322) 100%);
+.second-slide {
+  background: rgb(255, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(3, 158, 16, 0.849) 0%,
+    rgba(55, 235, 0, 0.459) 100%,
+    rgba(252, 176, 69, 0.322) 100%
+  );
 }
 
 .third-slide {
-    background: rgb(231,209,0);
-background: linear-gradient(90deg, rgba(231,209,0,0.6474964985994398) 0%, rgba(253, 119, 29, 0.253) 100%);
+  background: rgb(231, 209, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(231, 209, 0, 0.6474964985994398) 0%,
+    rgba(253, 119, 29, 0.253) 100%
+  );
 }
 
 .slide-img-wrapper {
-    height: 90%;
-    width: 50%;
+  height: 90%;
+  width: 50%;
 }
 
 .slide-img-wrapper img {
@@ -44,17 +100,17 @@ background: linear-gradient(90deg, rgba(231,209,0,0.6474964985994398) 0%, rgba(2
 }
 
 .slide-info-wrapper {
-    width: 50%;
-    margin-right: 40px;
+  width: 50%;
+  margin-right: 40px;
 }
 
 .slide-info-title {
-    font-size: 40px;
+  font-size: 40px;
 }
 
-.slide-info-desc  {
-    margin: 21px 0;
-    font-size: 24px;
-    font-weight: 500;
-    letter-spacing: 3px;
+.slide-info-desc {
+  margin: 0 21px;
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 3px;
 }
