--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 :root {
   --main-color: #efefef;
-  --primary-color:#1976d2;
+  --primary-color: #1976d2;
+  --secondary-color: #e0e0f1;
 }
 
-*{
+* {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
- box-sizing: border-box;
- padding: 0;
- margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,10 +20,10 @@ body {
   background-color: var(--main-color);
 }
 
-ul{
-  list-style:none;
+ul {
+  list-style: none;
 }
 
-input:focus{
+input:focus {
   outline: none;
 }
