--- a/src/pages/authers/authors.css
+++ b/src/pages/authers/authors.css
@@ -16,8 +16,24 @@
 }
 
 .authors-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.author {
+  width: 400px;
+  height: 350px;
+  padding: 15px;
+  margin: 5px 5px 20px ;
+  border: 1px solid gray;
+border-radius: 7px;
+background-color: #fff;
+text-align: center;
+}
+
+.author-img {
+  width: 100%;height: 300px;object-fit: cover;
+  border-radius: 7px;
 }
